--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #9796f0;
-$secondary-color: #fbc7d4;
+$primary-color: #FC354C;
+$secondary-color: #0ABFBC;
 
 $white-color: #fff;
 
